welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: not found: value color
if (getCouleurSol():color.yellow) {
                    ^