welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
if (getCouleurSol():color.yellow) {
	avance();
}

